// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FLPButton > should not call onClick when clicked and disabled is true 1`] = `
<body>
  <div>
    <button
      class="d_inline-flex ai_center jc_center bdr_full fw_medium trs_all_0.2s cursor_pointer px_6 py_3 fs_sm lh_1 disabled:op_0.5 disabled:cursor_not-allowed focusVisible:ring_2px_solid focusVisible:ring-c_primary focusVisible:ring-o_2px bg_primary c_primary.foreground hover:bg_primary.hover"
      disabled=""
    >
      FLPButton
    </button>
  </div>
</body>
`;

exports[`FLPButton > should render correctly 1`] = `
<div>
  <button
    class="d_inline-flex ai_center jc_center bdr_full fw_medium trs_all_0.2s cursor_pointer px_6 py_3 fs_sm lh_1 disabled:op_0.5 disabled:cursor_not-allowed focusVisible:ring_2px_solid focusVisible:ring-c_primary focusVisible:ring-o_2px bg_primary c_primary.foreground hover:bg_primary.hover"
  >
    FLPButton
  </button>
</div>
`;

exports[`FLPButton > should render correctly with props 1`] = `
<div>
  <button
    class="d_inline-flex ai_center jc_center bdr_full fw_medium trs_all_0.2s cursor_pointer px_6 py_3 fs_sm lh_1 disabled:op_0.5 disabled:cursor_not-allowed focusVisible:ring_2px_solid focusVisible:ring-c_primary focusVisible:ring-o_2px bg_background c_text.primary bd_1px_solid bd-c_border hover:bg_accent hover:c_accent.foreground"
    disabled=""
  >
    FLPButton
  </button>
</div>
`;
